Update Dashboard files

--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,25 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+
+
+.DarkTheme{
+  background: rgb(0,0,0);
+  background: linear-gradient(156deg, rgba(0,0,0,1) 9%, rgba(0,27,37,1) 95%);
+  color: white;
+  
+}
+.DarKMiddle{
+  background-color: #1e1b1b;
+color: white;
+box-shadow: white;
+}
+.DarkSide{
+  background-color: #001218;
+  color: white;
+  color: white;
+  box-shadow: 20px 0 10px -10px #025f66;
+
+}
